# BCI2000src-backup

./: README.md
src/contrib/Application/: CMakeLists.txt
src/contrib/Application/ANTTask/: ANTTask.cpp  ANTTask.h  CMakeLists.txt
src/contrib/Application/ERPSpeller/: ERPSpellerTask.cpp  ERPSpellerTask.h  TextGroupStimulus.cpp  TextGroupStimulus.h
src/contrib/Application/MFCdemo/: MFCdemo.h  MFCdemoDlg.h  TaskFilter.cpp  TaskFilter.h  WINMAIN.CPP  resource.h
src/contrib/Application/MicRecorder/: MicRecorder.cpp  MicRecorder.h  MicRecorderFilter.cpp  MicRecorderFilter.h
src/contrib/Application/SlowWaveApp/: Task.cpp  Task.h
src/contrib/Application/Speller/: Task.cpp  Task.h  UCursor.cpp  UCursor.h  UDictionary.cpp  UDictionary.h  UStatusBar.cpp  UStatusBar.h  UTarget.cpp  UTarget.h  UTargetSequence.cpp  UTargetSequence.h  UTree.cpp  UTree.h  UTrialSequence.cpp  UTrialSequence.h  UserDisplay.cpp  UserDisplay.h
src/contrib/Extensions/: CMakeLists.txt  Extensions.cmake
src/contrib/Extensions/AudioExtension/: AudioExtension.cpp  AudioExtension.h  IncludeExtension.cmake
src/contrib/Extensions/CyberGloveLogger/: CyberGloveInputLogger.cpp  CyberGloveInputLogger.h
src/contrib/Extensions/DataGloveLogger/: 5DTDataGloveUltraLogger.cpp  5DTDataGloveUltraLogger.h
src/contrib/Extensions/EyetrackerLogger/: EyetrackerLogger.cpp  EyetrackerLogger.h
src/contrib/Extensions/EyetrackerLoggerEyeLink/: EyetrackerLoggerEyeLink.cpp  EyetrackerLoggerEyeLink.h  IncludeExtension.cmake
src/contrib/Extensions/EyetrackerLoggerSimulator/: EyetrackerLoggerSimulator.cpp  EyetrackerLoggerSimulator.h  IncludeExtension.cmake
src/contrib/Extensions/EyetrackerLoggerTobii3/: EyetrackerLoggerTobii3.cpp  EyetrackerLoggerTobii3.h  TobiiNamespace.h
src/contrib/Extensions/EyetrackerLoggerTobiiPro/: EyetrackerLoggerTobiiPro.cpp  EyetrackerLoggerTobiiPro.h  IncludeExtension.cmake
src/contrib/Extensions/EyetrackerLoggerTobiiX/: EyetrackerLoggerTobiiX.cpp  EyetrackerLoggerTobiiX.h
src/contrib/Extensions/GazeMonitorFilter/: GazeMonitorFilter.cpp  GazeMonitorFilter.h
src/contrib/Extensions/NIDAQLogger/: NIDAQFilter.cpp  NIDAQFilter.h  NIDAQLogger.cpp  NIDAQLogger.h
src/contrib/Extensions/ParallelPortFilter/: ParallelPort.cpp  ParallelPort.h  ParallelPortFilter.cpp  ParallelPortFilter.h  ParallelPortLogger.cpp  ParallelPortLogger.h
src/contrib/Extensions/StimBoxFilter/: IncludeExtension.cmake  StimBoxFilter.cpp  StimBoxFilter.h
src/contrib/Extensions/WebcamLogger/: IncludeExtension.cmake  WebcamController.cpp  WebcamController.h  WebcamLogger.cpp  WebcamLogger.h
src/core/Tools/: CMakeLists.txt
src/core/Tools/BCI2000Analysis/: AnalysisData.cpp  (+9 more)
(+1699 files in other folders)
