###########################################################################
## $Id: CMakeLists.txt 6171 2020-12-31 13:20:16Z mellinger $
## Authors: griffin.milsap@gmail.com
## Description: Build information for BCI2000 and CMake

# Set this directory name
SET( DIR_NAME "${DIR_NAME}Extensions/" )

ADD_SUBDIRECTORY( WiimoteLogger )